gccida/c0/output_die
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_die/src/dwarf2out.c:6878:30: error: use of undeclared identifier 'aEndOfChildrenO'
dw2_asm_output_data( 1, 0LL, aEndOfChildrenO, diea->die_offset); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_die/src/obj/dwarf2out.o] Error 1
